<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/deadline_pref_header"
            app:iconSpaceReserved="false">

        <ListPreference
                app:key="red"
                app:title="@string/red_zone"
                app:entries="@array/deadline_entries"
                app:entryValues="@array/deadline_values"
                app:defaultValue="2"
                app:summary="@string/red_zone_summary"
                app:iconSpaceReserved="false"/>

        <ListPreference
                app:key="yellow"
                app:title="@string/yellow_zone"
                app:entries="@array/deadline_entries"
                app:entryValues="@array/deadline_values"
                app:defaultValue="2"
                app:summary="@string/yellow_zone_summary"
                app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>