<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.example.taskmanager.taskdetail.TaskDetailViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".taskdetail.TaskDetailFragment">

        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/item_height"
                android:inputType="textPersonName"
                android:id="@+id/editTextTaskName"
                android:text="@{viewModel.selectedTask.name}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextDeadline"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:background="@xml/border_bottom_right"
                style="@style/itemTextStyle"
                android:hint="@string/name"
        />

        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/item_height"
                android:inputType="date"
                android:id="@+id/editTextDeadline"
                app:date="@{viewModel.selectedTask.date}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="w,3:1"
                android:singleLine="true"
                android:background="@xml/border_bottom"
                style="@style/itemTextStyle"
                android:hint="@string/date"
                android:onClick="@{() -> viewModel.onDateClicked()}"
                android:focusable="false"/>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/editTextTaskDetail"
                    android:textAlignment="viewStart"
                    android:background="@android:color/transparent"
                    style="@style/itemTextStyle"
                    android:text="@{viewModel.selectedTask.detail}"
                    android:lineSpacingMultiplier="1.2"
                    android:hint="@string/detail"
            />
        </ScrollView>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="45dp"
                android:id="@+id/guideline" android:background="#000000"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>